--- a/app/src/main/res/layout/dialog_about_update_data.xml
+++ b/app/src/main/res/layout/dialog_about_update_data.xml
@@ -29,6 +29,19 @@
         android:id="@+id/headAcheUpdateEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
+
+    </EditText>
+    <TextView
+        android:id="@+id/drowsinessTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Сонливость"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/drowsinessEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
         <requestFocus />
 
     </EditText>
